# libipcvideo

./: Makefile  README  configure.ac  ipcstatistics.c  ipcvideo.c  ipcvideo.h  producer-demo.c
src/: Makefile.am  ipcdisplay.c  ipcfifo.c  ipcfifo.h  ipcstatistics.c  ipcvideo.c  libipcvideo.pc.in  metadata-demo.c  producer-demo.c
src/libipcvideo/: ipcdisplay.h  ipcfifo.h  ipcstatistics.h  ipcvideo.h
